# automatico_mrs

./: CMakeLists.txt  README.md  controle_automatico.cpp  package.xml
