<?xml version="1.0"?>
<package>
  <name>automatico_mrs</name>
  <version>0.1.0</version>
  <description>The automatico_mrs package</description>

  <maintainer email="vinicius@todo.todo">vinicius</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp mavros mavros_msgs libmavconn mavlink dynamixel_sdk dynamixel_workbench_msgs dynamixel_workbench_toolbox</build_depend>
  <run_depend>roscpp mavros mavros_msgs libmavconn mavlink dynamixel_sdk dynamixel_workbench_msgs dynamixel_workbench_toolbox</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
