<?xml version="1.0"?>
<package>
  <name>automatico_mrs</name>
  <version>0.1.0</version>
  <description>The automatico_mrs package</description>

  <maintainer email="vinicius@todo.todo">vinicius</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp      </build_depend>
  <build_depend>mavros      </build_depend>
  <build_depend>mavros_msgs </build_depend>
  <build_depend>mavlink     </build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_workbench_msgs</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>dynamixel_sdk</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamixel_workbench_msgs</run_depend>
  <run_depend>dynamixel_workbench_toolbox</run_depend>
  <run_depend>dynamixel_sdk</run_depend>

  <run_depend>mavros      </run_depend>
  <run_depend>mavros_msgs </run_depend>
  <run_depend>mavlink     </run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
